# AmazonQcli-Kids_2048-Game

./: .gitignore  README.md  SECURITY.md  game.py  game_data.json  main.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
assets/fonts/: README.md
assets/images/: README.md
assets/sounds/: README.md
screenshots/: README.md
utils/: animations.py  constants.py  game_logic.py  settings.py  tutorial.py
